CSCEXAM-000 More Scala stuff